--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "postcss": "^8.5.1",
     "tailwindcss": "3.4.17",
     "typescript": "~5.6.2",
+    "vite-plugin-vue-devtools": "^7.7.1",
     "vite": "^6.0.5",
     "vue-tsc": "^2.2.0"
   }
