--- a/package.json
+++ b/package.json
@@ -19,14 +19,16 @@
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@types/lodash.debounce": "^4.0.9",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
     "autoprefixer": "^10.4.20",
+    "lodash.debounce": "^4.0.8",
     "postcss": "^8.5.1",
     "tailwindcss": "3.4.17",
     "typescript": "~5.6.2",
-    "vite-plugin-vue-devtools": "^7.7.1",
     "vite": "^6.0.5",
+    "vite-plugin-vue-devtools": "^7.7.1",
     "vue-tsc": "^2.2.0"
   }
 }
